[gd_scene load_steps=4 format=3 uid="uid://idjtsx48j57c"]

[ext_resource type="Script" uid="uid://7qol1onovhvi" path="res://dice/physical_die.gd" id="1_3clpv"]
[ext_resource type="Texture2D" uid="uid://bxq3rhkyuusyw" path="res://gui/icons/x.png" id="2_ygxgw"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0xm2m"]
friction = 0.3
bounce = 0.21

[node name="physical_die" type="RigidBody3D"]
physics_interpolation_mode = 1
collision_layer = 2
collision_mask = 3
input_ray_pickable = false
mass = 0.5
physics_material_override = SubResource("PhysicsMaterial_0xm2m")
gravity_scale = 5.0
continuous_cd = true
linear_damp = 0.1
angular_damp = 0.1
script = ExtResource("1_3clpv")

[node name="score_area" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="score_collision" type="CollisionShape3D" parent="score_area"]

[node name="physics_collision" type="CollisionShape3D" parent="."]

[node name="disabled_sprite" type="Sprite3D" parent="."]
visible = false
pixel_size = 0.04
billboard = 1
no_depth_test = true
texture = ExtResource("2_ygxgw")

[connection signal="input_event" from="score_area" to="." method="_on_score_area_input_event"]
